--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "candy-machine-mint",
-  "homepage": ".",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
